修改bug,改打包方式jar为pom

--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     <artifactId>hjmall-parent</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-
+    <packaging>pom</packaging>
 
     <!-- 对整个项目所有jar包进行统一管理 -->
     <properties>
